--- a/Style.css
+++ b/Style.css
@@ -12,3 +12,20 @@ td {
 table {
     display: flex;
 }
+
+#popUp {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(113, 87, 139, 0.9);
+}
+
+.popText {
+    display: flex;
+}
+
+.acept {
+    display: block;
+}
