--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,12 @@
+body {
+    background-color: rgb(133, 193, 233, 0.8);
+}
+
 td {
     border: 0.2rem solid black;
     width: 5rem;
     height: 5rem;
+    border-radius: 0.5rem;
 }
 
 .container {
@@ -19,13 +24,31 @@ table {
     top: 0;
     width: 100%;
     height: 100%;
+    display: grid;
     background-color: rgba(113, 87, 139, 0.9);
 }
 
 .popText {
     display: flex;
+    justify-content: center;
+    font-size: 3rem;
+    align-items: center;
+}
+
+#reset {
+    background-color: gray;
 }
 
 .acept {
+    width: 50%;
+    height: 50%;
+    justify-self: center;
+    font-size: 3rem;
+}
+
+button {
+
+    border-radius: 0.5rem;
     display: block;
+    background-color: rgb(69, 179, 157, 0.6);
 }
